--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
     "@microsoft/fetch-event-source": "^2.0.1",
+    "@types/marked": "^5.0.1",
+    "highlight.js": "^11.8.0",
+    "marked": "^7.0.2",
+    "marked-highlight": "^2.0.4",
     "axios": "^1.5.1",
     "core-js": "^3.8.3",
     "element-plus": "^2.4.1",
     "qs": "^6.11.2",
     "sse": "0.0.8",
     "vue": "^3.2.36",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "sass": "^1.64.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -30,7 +35,8 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "highlight.js": "^11.9.0",
-    "marked": "^9.1.2"
+    "marked": "^7.0.5",
+    "sass-loader": "^13.3.2"
   },
   "eslintConfig": {
     "root": true,
