使用 el-icon 美化会话列表（新建会话图标、会话图标、编辑会话名称图标、删除会话图标、图标的隐藏切换），实现会话及会话内容的删除操作。

--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
     "@element-plus/icons-vue": "^2.1.0",
     "@microsoft/fetch-event-source": "^2.0.1",
     "@types/marked": "^5.0.1",
-    "highlight.js": "^11.8.0",
-    "marked": "^7.0.2",
-    "marked-highlight": "^2.0.4",
     "axios": "^1.5.1",
     "core-js": "^3.8.3",
     "element-plus": "^2.4.1",
+    "highlight.js": "^11.8.0",
+    "marked": "^7.0.2",
+    "marked-highlight": "^2.0.6",
     "qs": "^6.11.2",
+    "sass": "^1.64.1",
     "sse": "0.0.8",
     "vue": "^3.2.36",
-    "vue-router": "^4.0.3",
-    "sass": "^1.64.1"
+    "vue-router": "^4.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
