--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,11 @@
 spring:
   application:
     name: chat
+
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
+
   # 数据库连接池
   datasource:
     druid:
@@ -17,6 +19,10 @@ spring:
     multipart:
       max-file-size: 100MB
       max-request-size: 150MB
+
+  redis:
+    port: 6379
+    host: 192.168.56.104
 
 # 端口号
 server:
