--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "highlight.js": "^11.8.0",
     "marked": "^7.0.2",
     "marked-highlight": "^2.0.6",
-    "qs": "^6.11.2",
     "node-sass": "^4.14.1",
+    "qs": "^6.11.2",
     "sass-loader": "^10.0.1",
     "sse": "0.0.8",
     "vue": "^3.2.36",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
