--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
     "eslint-plugin-vue": "^8.0.3",
     "highlight.js": "^11.9.0",
     "marked": "^7.0.5",
+    "crypto-browserify": "^3.12.0",
+    "js-md5": "^0.8.0",
+    "node-polyfill-webpack-plugin": "^2.0.1",
     "sass-loader": "^13.3.2"
   },
   "eslintConfig": {
