--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.5.1",
     "core-js": "^3.8.3",
     "element-plus": "^2.4.1",
+    "event-source-polyfill": "^1.0.31",
     "highlight.js": "^11.8.0",
     "marked": "^7.0.2",
     "marked-highlight": "^2.0.6",
