--- a/package.json
+++ b/package.json
@@ -37,12 +37,13 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "@vue/runtime-core": "^3.3.5",
+    "@vueuse/core": "^10.6.0",
+    "crypto-browserify": "^3.12.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "highlight.js": "^11.9.0",
-    "marked": "^7.0.5",
-    "crypto-browserify": "^3.12.0",
     "js-md5": "^0.8.0",
+    "marked": "^7.0.5",
     "node-polyfill-webpack-plugin": "^2.0.1",
     "sass-loader": "^13.3.2"
   },
