--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@element-plus/icons-vue": "^2.1.0",
     "@microsoft/fetch-event-source": "^2.0.1",
     "@types/marked": "^5.0.1",
+    "@vueup/vue-quill": "^1.0.0-alpha.40",
     "axios": "^1.5.1",
     "core-js": "^3.8.3",
     "element-plus": "^2.4.1",
@@ -21,9 +22,11 @@
     "node-sass": "^4.14.1",
     "particles.js": "^2.0.0",
     "qs": "^6.11.2",
+    "quill": "^1.3.7",
     "sass-loader": "^10.0.1",
     "sse": "0.0.8",
     "vue": "^3.2.36",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^4.0.3",
     "vuex": "^4.1.0",
     "vuex-persistedstate": "^4.1.0"
@@ -40,12 +43,12 @@
     "@vueuse/core": "^10.6.0",
     "crypto-browserify": "^3.12.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
+    "eslint-plugin-vue": "^9.18.1",
     "highlight.js": "^11.9.0",
     "js-md5": "^0.8.0",
     "marked": "^7.0.5",
     "node-polyfill-webpack-plugin": "^2.0.1",
-    "sass-loader": "^13.3.2"
+    "sass-loader": "^10.4.1"
   },
   "eslintConfig": {
     "root": true,
