--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-vue": "^9.18.1",
     "highlight.js": "^11.9.0",
     "js-md5": "^0.8.0",
+    "lodash": "^4.17.21",
     "marked": "^7.0.5",
     "node-polyfill-webpack-plugin": "^2.0.1",
     "sass-loader": "^10.4.1"
