--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "particles.js": "^2.0.0",
     "qs": "^6.11.2",
     "quill": "^1.3.7",
+    "quill-delta": "^5.1.0",
     "sass-loader": "^10.0.1",
     "sse": "0.0.8",
     "vue": "^3.2.36",
