--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "marked-highlight": "^2.0.6",
     "node-sass": "^4.14.1",
     "particles.js": "^2.0.0",
+    "pdf-vue3": "^1.0.11",
+    "pinia": "^2.1.7",
     "qs": "^6.11.2",
     "quill": "^1.3.7",
     "quill-delta": "^5.1.0",
@@ -36,6 +38,7 @@
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@babel/plugin-transform-private-methods": "^7.22.5",
+    "@icon-park/vue-next": "^1.4.2",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
