--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "node-sass": "^4.14.1",
     "particles.js": "^2.0.0",
     "pdf-vue3": "^1.0.11",
+    "pdfjs-dist": "^4.0.269",
     "pinia": "^2.1.7",
     "qs": "^6.11.2",
     "quill": "^1.3.7",
@@ -53,6 +54,7 @@
     "lodash": "^4.17.21",
     "marked": "^7.0.5",
     "node-polyfill-webpack-plugin": "^2.0.1",
+    "pdf-lib": "^1.17.1",
     "sass-loader": "^10.4.1"
   },
   "eslintConfig": {
