--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "highlight.js": "^11.8.0",
     "marked": "^7.0.2",
     "marked-highlight": "^2.0.6",
+    "mavon-editor": "^3.0.1",
     "node-sass": "^4.14.1",
     "particles.js": "^2.0.0",
     "pdf-vue3": "^1.0.11",
